# AI-Trader-v2

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  README.md  README_INSTALLATION.md  config.yaml  constraints-3.11.txt  diagnostic_environment.py  docker-compose.yml  find_project.sh  fix_directory_navigation.py  install_dependencies.py  pyproject.toml  requirements.private.txt  requirements.txt  requirements_py313.txt  start_agent.py
.github/workflows/: ci.yml  test.yml
ai_trader/: __init__.py  ai_model.py  backtester.py  bitget_websocket.py  dashboard.py  data_handler.py  data_stream.py  decision_engine.py  execution.py  learning.py  main.py  market_observer.py  memory.py  notifications.py  risk.py  risk_manager.py  strategy.py  ta_engine.py  telegram_controller.py  test_suite.py
ai_trader/backend/: __init__.py  metrics_service.py
ai_trader/compat/: __init__.py  numpy_shims.py
ai_trader/dashboard/: __init__.py  adapters.py  export.py  kpis.py  layout.py  news.py  routes.py  security.py  server.py  stream.py
ai_trader/dashboard/static/: main.js  style.css
ai_trader/dashboard/templates/: dashboard.html
ai_trader/tools/: preflight.py
ai_trader/utils/: security.py
scripts/: bootstrap_dev.sh
templates/: dashboard.html
tests/: test_boot_agent_intact.py  test_dashboard_endpoints.py  test_dashboard_smoke.py  test_data_handler.py  test_imports_full.py  test_imports_minimal.py  test_memory.py  test_trading_not_blocked.py
