[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-trader-v2"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32.0",
  "pandas>=2.2.3",
  "numpy>=2.0.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0",
  "aiohttp>=3.9.5",
  "cryptography>=42.0.0",
  "setuptools>=68",
]

[project.optional-dependencies]
dashboard = [
  "Flask>=3.0.0",
  "Flask-Cors>=4.0.0",
  "dash>=2.17.0",
  "dash-bootstrap-components>=1.6.0",
  "plotly>=5.22.0",
  "flask-socketio>=5.3.6",
  "openpyxl>=3.1.2",
  "reportlab>=4.2.0",
  "weasyprint>=61.2; platform_system!='Windows'",
]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "requests-mock>=1.12.1",
]
ml = [
  "keras>=3.0.0",
  "tensorflow>=2.16.0; platform_system!='Darwin' or platform_machine!='arm64'",
  "tensorflow-macos>=2.16.0; platform_system=='Darwin' and platform_machine=='arm64'",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_trader*"]
